--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center no-repeat;
+  background: url("../img/hero-bg.png") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 82px;
@@ -467,7 +467,6 @@ section {
   top: 60px;
   left: 0;
   right: 0;
-  transform: skewY(-3deg);
 }
 
 /*--------------------------------------------------------------
